src/main/scala/chapter3/compileroutput/FineGrainedAccessControl.output
// #output
FineGrainedAccessControl.scala:12: error: value secrets is not a member of
society.professional.Executive
        println(another.secrets) //ERROR
                        ^
FineGrainedAccessControl.scala:28: error: variable workDetails in class 
Executive cannot be accessed in society.professional.Executive
        println(person.workDetails) // ERROR
                       ^
two errors found
// #output
